# Ironclad-Agent

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.sandbox/: script.py  test_network.py
agent/: Cargo.toml  main.py
agent/src/: main.rs
src/: audit.rs  crypto.rs  main.rs  verify.rs
tests/benchmarks/: run_benchmark.py
tests/benchmarks/scripts/: benchmark_workload.py
tests/smoke/: run_smoke.py
tests/smoke/scripts/: test_filesystem_escape.py  test_network.py  test_normal.py
