[package]
name = "ironclad-runtime"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "agent"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
wasmtime = "43.0.1"
wasmtime-wasi = "43.0.1"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
rig-core = "0.35.0"
time = "0.3"